# ctfl

./: .gitignore  PKGBUILD  README.md  ctfl.desktop  pyproject.toml
.claude/: settings.json
.claude/agents/: code-auditor.md  python-architect.md  quality-analyst.md  test-writer.md
.claude/commands/: commit.md  release.md
.claude/hooks/: block-sensitive-files.sh
.claude/skills/confidence-assessment/: SKILL.md
.claude/skills/ctfl-architecture/: SKILL.md
.claude/skills/docs-freshness/: SKILL.md
.github/workflows/: ci.yml  pip-audit.yml
appimage/: ctfl.desktop  entrypoint.sh  requirements.txt
aur/: .SRCINFO  PKGBUILD
ctfl/: __init__.py  __main__.py  about_dialog.py  autostart.py  config.py  constants.py  credentials.py  main.py  popup.py  settings_dialog.py  tray.py  updater.py
ctfl/providers/: __init__.py  api.py  instance.py  local.py  oauth.py  prediction.py  pricing.py
scripts/: build-deb.sh  build-rpm.sh  docs-freshness.sh  release.sh
tests/: test_api_parse.py  test_bar_overflow.py  test_dataclasses.py  test_enterprise_spend.py  test_format_cost.py  test_format_reset.py  test_format_tokens.py  test_instance.py  test_local_parse_jsonl.py  test_long_context.py  test_oauth_read_token.py  test_project_name.py  test_short_model.py  test_updater.py  test_weekly_limits.py
