[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctfl"
dynamic = ["version"]
description = "Claude Tracker For Linux — system tray monitor for Claude usage"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.5",
    "keyring",
]

[project.gui-scripts]
ctfl = "ctfl.main:main"

[tool.setuptools.dynamic]
version = {attr = "ctfl.__version__"}

[tool.setuptools.packages.find]
include = ["ctfl*"]
