[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctfl"
dynamic = ["version"]
description = "Claude Tracker For Linux — system tray monitor for Claude usage"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Morgan", email = "morgan@mordup.com"},
]
keywords = ["claude", "anthropic", "usage", "tracker", "system-tray", "linux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
dependencies = [
    "PyQt6>=6.5",
    "keyring",
]

[project.urls]
Homepage = "https://github.com/mordup/ctfl"
Repository = "https://github.com/mordup/ctfl"
"Bug Tracker" = "https://github.com/mordup/ctfl/issues"

[project.gui-scripts]
ctfl = "ctfl.main:main"

[tool.setuptools.dynamic]
version = {attr = "ctfl.__version__"}

[tool.setuptools.packages.find]
include = ["ctfl*"]

[tool.setuptools.package-data]
ctfl = ["icons/*.svg"]
