[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctfl"
dynamic = ["version"]
description = "Claude Tracker For Linux — system tray monitor for Claude usage"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Morgan", email = "morgan@mordup.com"},
]
keywords = ["claude", "anthropic", "usage", "tracker", "system-tray", "linux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
dependencies = [
    "PyQt6>=6.5",
    "keyring",
]

[project.urls]
Homepage = "https://github.com/mordup/ctfl"
Repository = "https://github.com/mordup/ctfl"
"Bug Tracker" = "https://github.com/mordup/ctfl/issues"

[project.gui-scripts]
ctfl = "ctfl.main:main"

[tool.setuptools.dynamic]
version = {attr = "ctfl.__version__"}

[tool.setuptools.packages.find]
include = ["ctfl*"]

[tool.setuptools.package-data]
ctfl = ["icons/*.svg"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort
    "B",     # flake8-bugbear
    "S",     # flake8-bandit (security)
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
]
ignore = [
    "S310",  # urllib.urlopen — we validate URLs ourselves
    "S603",  # subprocess calls (we need them for updates)
    "S607",  # partial executable path
    "E501",  # line length — handled by formatter, not linter
    "SIM105", # contextlib.suppress — try/except/pass is clearer
    "SIM108", # ternary operator — if/else block is clearer
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S108", "SIM117"]  # allow assert, /tmp paths, nested with
"ctfl/providers/oauth.py" = ["S105"]  # _TOKEN_URL is not a password
"ctfl/main.py" = ["SIM115"]  # lock file must stay open
